# rust-embed-discovery

./: README.md
05-led-roulette/: Cargo.toml  Embed.toml  build.rs
05-led-roulette/.cargo/: config.toml
05-led-roulette/src/: main.rs
07-urat/: Cargo.toml  Embed.toml
07-urat/src/: main.rs
08-i2c/: Cargo.toml
08-i2c/src/: main.rs
